wiki: Properly render revision user.

--- a/r2/r2/templates/wikirevision.html
+++ b/r2/r2/templates/wikirevision.html
@@ -55,7 +55,7 @@
     </td>
     
     <td>
-        ${thing.author_name()}
+        ${thing.printable_author}
     </td>
     
     <td style="font-style: italic;">
