--- a/r2/r2/templates/wikiview.html
+++ b/r2/r2/templates/wikiview.html
@@ -24,6 +24,7 @@
 
 <%!
     from r2.lib.filters import wikimarkdown
+    from r2.lib.pages import WrappedUser
 %>
 
 %if thing.diff:
@@ -41,7 +42,10 @@
 %if thing.edit_date:
     <hr/>
     <em>
-        ${_("revision by %s") % thing.edit_by}
-        &mdash;&nbsp;${timestamp(thing.edit_date)}&nbsp;ago
+        %if thing.edit_by:
+             ${unsafe(_("revision by&nbsp;%s") % WrappedUser(thing.edit_by).render())}
+             &mdash;&nbsp;
+        %endif
+        ${unsafe("%(time)s&nbsp;ago" % dict(time=timestamp(thing.edit_date)))}
     </em>
 %endif
