Revert "Remove unused UserList.addable property."
It turns out it wasn't so unused. :(

This reverts commit 984585d54b681d721d33ec614e9b58ae2f39cf2a.

--- a/r2/r2/templates/modlist.html
+++ b/r2/r2/templates/modlist.html
@@ -52,7 +52,7 @@
   %if thing.can_force_add:
     ${add_form(thing.form_title, thing.destination, thing.type, thing.container_name)}
   %endif
-  %if thing.editable:
+  %if thing.addable:
     <%call expr="add_form(thing.invite_form_title, thing.destination, thing.invite_type, thing.container_name, verb=_('invite'))">
       ${error_field("ALREADY_MODERATOR", "name")}
     </%call>
