--- a/r2/r2/templates/userlist.html
+++ b/r2/r2/templates/userlist.html
@@ -69,7 +69,7 @@
 </%def>
 
 <div class="${thing._class} usertable">
-  %if thing.editable:
+  %if thing.addable:
     ${add_form(thing.form_title, thing.destination, thing.type, thing.container_name)}
   %endif
 
