Tweak gold styling fonts to include Bitstream Charter.

--- a/r2/r2/public/static/css/goldinfo.less
+++ b/r2/r2/public/static/css/goldinfo.less
@@ -7,7 +7,8 @@
 }
 
 section#about-gold, section#postcard, .or-box {
-    font-family: "Bitstream Charter", serif;
+    font-family: "Bitstream Charter", "Hoefler Text", "Palatino Linotype",
+                 "Book Antiqua", Palatino, georgia, garamond, FreeSerif, serif;
 }
 
 section#about-gold {
