Add md template util.
This breaks the _() step out of the existing _md() template util for
conveniently inserting markdown that has already been translated.

--- a/r2/r2/templates/utils.html
+++ b/r2/r2/templates/utils.html
@@ -601,6 +601,10 @@ ${unsafe(txt)}
   %endif
 </%def>
 
+<%def name="md(text, wrap=False)">
+  ${unsafe(safemarkdown(text, wrap=wrap))}
+</%def>
+
 <%def name="_md(text, wrap=False)">
-  ${unsafe(safemarkdown(_(text), wrap=wrap))}
+  ${md(_(text), wrap=wrap)}
 </%def>
