ads: Get rid of an unsightly gap between the 300x100 and the border.

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -4247,6 +4247,7 @@ table.lined-table {
 .sponsorshipbox div { 
     border: 1px solid #D0D0D0; 
     width: 300px; 
+    font-size: 0;
 }
 
 /* otherwise the pixel will cause a horizontal scrollbar in firefox */
