--- a/r2/r2/templates/profilebar.html
+++ b/r2/r2/templates/profilebar.html
@@ -110,29 +110,36 @@
     % endif
   %endif
 
-  %if thing.gold_remaining:
+  %if thing.gold_remaining or thing.gold_creddit_message:
     <div class="rounded gold-accent gold-expiration-info">
-      <div class="gold-remaining"
-           %if thing.gold_expiration:
-             title="${thing.gold_expiration.strftime('%Y-%m-%d')}"
-           %endif
-           >
-        <span class="karma">
-          ${thing.gold_remaining}
-        </span>
-        &#32;
-        ${_("of reddit gold remaining")}
-      </div>
-      %if getattr(thing, "gold_subscr_id", None):
-        <%  
-          paypal_link = ("https://www.paypal.com/cgi-bin/webscr?cmd=_subscr-find&alias=%s" % g.goldthanks_email)
-         %>
-         <div>
-          <a href=${paypal_link}>
-            ${_("Recurring Paypal subscription")}
-          </a>
+      %if thing.gold_remaining:
+        <div class="gold-remaining"
+             %if thing.gold_expiration:
+               title="${thing.gold_expiration.strftime('%Y-%m-%d')}"
+             %endif
+             >
+          <span class="karma">
+            ${thing.gold_remaining}
+          </span>
           &#32;
-          ${thing.gold_subscr_id}
+          ${_("of reddit gold remaining")}
+        </div>
+        %if getattr(thing, "gold_subscr_id", None):
+          <%  
+            paypal_link = ("https://www.paypal.com/cgi-bin/webscr?cmd=_subscr-find&alias=%s" % g.goldthanks_email)
+           %>
+           <div>
+            <a href=${paypal_link}>
+              ${_("Recurring Paypal subscription")}
+            </a>
+            &#32;
+            ${thing.gold_subscr_id}
+          </div>
+        %endif
+      %endif
+      %if thing.gold_creddit_message:
+        <div class="gold-creddits-remaining">
+          ${plain_link(thing.gold_creddit_message, "/gold?goldtype=gift")}
         </div>
       %endif
     </div>
