templates: Use None as a default instead of {} for extra_config.

--- a/r2/r2/templates/utils.html
+++ b/r2/r2/templates/utils.html
@@ -407,7 +407,7 @@ ${unsafe(txt)}
 </%def>
 
 
-<%def name="js_setup(extra_config={})">
+<%def name="js_setup(extra_config=None)">
   <script type="text/javascript" id="config">
     r.setup(${unsafe(json.dumps(js_config(extra_config)))})
   </script>
