Remove unused utility/template_helpers alternatives to query_string

--- a/r2/r2/templates/comment.html
+++ b/r2/r2/templates/comment.html
@@ -21,7 +21,7 @@
 ###############################################################################
 
 <%!
-   from r2.lib.filters import edit_comment_filter, unsafe
+   from r2.lib.filters import unsafe
    from r2.lib.pages.things import CommentButtons
    from r2.lib.pages import WrappedUser
 %>
