--- a/r2/r2/templates/message.html
+++ b/r2/r2/templates/message.html
@@ -21,7 +21,7 @@
 ###############################################################################
 
 <%!
-   from r2.lib.filters import edit_comment_filter, safemarkdown
+   from r2.lib.filters import safemarkdown
    from r2.lib.pages.things import MessageButtons
    from r2.lib.pages import WrappedUser
 %>
