--- a/r2/r2/templates/profilebar.html
+++ b/r2/r2/templates/profilebar.html
@@ -21,7 +21,7 @@
 ###############################################################################
 
 <%! 
-   from r2.lib.filters import edit_comment_filter, unsafe, safemarkdown
+   from r2.lib.filters import unsafe, safemarkdown
    from r2.lib.template_helpers import static, format_number
  %>
 <%namespace file="utils.html" import="submit_form, plain_link, thing_timestamp"/>
