--- a/r2/r2/templates/goldinfopage.html
+++ b/r2/r2/templates/goldinfopage.html
@@ -99,7 +99,7 @@
     </section>
     <footer>
       <h1>${_('become a member today.')}</h1>
-      <p>${_('reddit gold is $3.99 / month, or $29.99 for a year.')}</p>
+      <p>${_('reddit gold is %(gold_month_price)s / month, or %(gold_year_price)s for a year.') % thing.prices}</p>
       <a class="buy-gold-button" href="/gold">${_('buy reddit gold')}</a>
     </footer>
   </section>
