Add back gold gift message markdown wrapping.
This enables comment/selfpost styling of the markup in this field.

--- a/r2/r2/templates/goldpayment.html
+++ b/r2/r2/templates/goldpayment.html
@@ -36,7 +36,7 @@
     %if thing.giftmessage:
       <p>${_("The following gift note will be attached:")}</p>
       <div class="giftmessage">
-        ${unsafe(safemarkdown(thing.giftmessage, wrap=False))}
+        ${unsafe(safemarkdown(thing.giftmessage))}
       </div>
     %endif
 
