--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -6325,6 +6325,7 @@ span.gilded-comment-icon {
     width: 23px;
 }
 
+body.post-under-1h-old .gilded-comment-icon,
 body.post-under-6h-old .gilded-comment-icon {
     opacity: .55;
 }
