--- a/r2/r2/templates/printable.html
+++ b/r2/r2/templates/printable.html
@@ -47,6 +47,30 @@ ${self.RenderPrintable()}
 
 <%def name="thing_css_class(what)">thing id-${what._fullname}</%def>
 
+<%def name="thing_css_rowclass(what)">
+  <%
+    if what.show_spam:
+      rowclass = what.rowstyle + " spam"
+      if what.show_spam == "author":
+        rowclass += " banned-user"
+    elif what.show_reports:
+      rowclass = what.rowstyle + " reported"
+    else:
+      rowclass = what.rowstyle
+    if hasattr(what, "_deleted") and what._deleted:
+      rowclass += " deleted"
+    if hasattr(what, "saved") and what.saved:
+      rowclass += " saved"
+    if hasattr(what, "hidden") and what.hidden:
+      rowclass += " hidden"
+    if hasattr(what, "gildings") and what.gildings > 0:
+      rowclass += " gilded"
+    if hasattr(what, "user_gilded") and what.user_gilded:
+      rowclass += " user-gilded"
+  %>
+  ${rowclass}
+</%def>
+
 <%def name="thing_data_attributes(what)">
     data-fullname="${what._fullname}"
     % if hasattr(what, 'campaign'):
@@ -68,27 +92,8 @@ ${self.RenderPrintable()}
       selflink = "self"
    else:
       selflink = ""
-
-   if thing.show_spam:
-     rowclass = thing.rowstyle + " spam"
-     if thing.show_spam == "author":
-       rowclass += " banned-user"
-   elif thing.show_reports:
-     rowclass = thing.rowstyle + " reported"
-   else:
-     rowclass = thing.rowstyle
-   if hasattr(thing, "_deleted") and thing._deleted:
-     rowclass += " deleted"
-   if hasattr(thing, "saved") and thing.saved:
-     rowclass += " saved"
-   if hasattr(thing, "hidden") and thing.hidden:
-     rowclass += " hidden"
-   if hasattr(thing, "gildings") and thing.gildings > 0:
-     rowclass += " gilded"
-   if hasattr(thing, "user_gilded") and thing.user_gilded:
-     rowclass += " user-gilded"
  %>
-<div class="${self.thing_css_class(thing)} ${rowclass} ${unsafe(cls)} ${selflink}"
+<div class="${self.thing_css_class(thing)} ${self.thing_css_rowclass(thing)} ${unsafe(cls)} ${selflink}"
     ${thing.display} onclick="click_thing(this)"
     ${unsafe(self.thing_data_attributes(thing))}>
   <p class="parent">
