Display the number of comment gildings.

--- a/r2/r2/public/static/css/compact.css
+++ b/r2/r2/public/static/css/compact.css
@@ -284,11 +284,13 @@ body[orient="landscape"] > #topbar > h1 { margin-left: -125px; width: 250px; }
 .comment.collapsed .tagline { margin-left: 20px; font-style: italcs; color: #AAA; }
 
 /** comment gilding */
-.gilded-comment-icon { position: relative; display: inline-block; background-image: url(../gold-coin.png); /* SPRITE */ background-repeat: no-repeat; height: 14px; width: 13px; margin: 0 0 -14px 6px; top: -8px; vertical-align: middle; }
+.gilded-comment-icon { position: relative; display: inline-block; background-image: url(../gold-coin.png); /* SPRITE */ background-repeat: no-repeat; height: 14px; width: 0; padding-left: 13px; margin: 0 0 -14px 6px; top: -8px; vertical-align: middle; }
 
-.user-gilded > .entry .gilded-comment-icon { width: 23px; }
+.user-gilded > .entry .gilded-comment-icon { padding-left: 23px; }
 
 body.post-under-1h-old .gilded-comment-icon, body.post-under-6h-old .gilded-comment-icon { opacity: .55; }
+
+.gilded-comment-count { color: #99895F; padding-left: 2px; font-size: .9em; vertical-align: middle; }
 
 /** messages and inbox */
 .message { background: white; position: relative; border: 1px solid #d9d9d9; margin: 10px; -moz-border-radius: 8px; -webkit-border-radius: 8px; -o-border-radius: 8px; -ms-border-radius: 8px; -khtml-border-radius: 8px; border-radius: 8px; padding: 5px; }
