--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -6318,19 +6318,27 @@ span.gilded-comment-icon {
     background-image: url(../gold-coin.png);  /* SPRITE */
     background-repeat: no-repeat;
     height: 14px;
-    width: 13px;
+    width: 0;
+    padding-left: 13px;
     margin: 0 0 -14px 8px;
     top: -8px;
     vertical-align: middle;
 }
 
 .user-gilded > .entry span.gilded-comment-icon {
-    width: 23px;
+    padding-left: 23px;
 }
 
 body.post-under-1h-old .gilded-comment-icon,
 body.post-under-6h-old .gilded-comment-icon {
     opacity: .55;
+}
+
+.gilded-comment-count {
+    color: #99895F;
+    padding-left: 2px;
+    font-size: .9em;
+    vertical-align: middle;
 }
 
 .buttons li.comment-save-button { display: none; }
