--- a/r2/r2/templates/comment.html
+++ b/r2/r2/templates/comment.html
@@ -113,7 +113,13 @@ ${parent.collapsed()}
   %endif
 
   % if thing.gilded_message:
-  <span class="gilded-comment-icon" title="${thing.gilded_message}"></span>
+  <span class="gilded-comment-icon" title="${thing.gilded_message}" data-count="${thing.gildings}">
+    % if thing.gildings > 1:
+      <span class="gilded-comment-count">
+        x${thing.gildings}
+      </span>
+    % endif
+  </span>
   % endif
 
   %if collapse:
