--- a/r2/r2/templates/thingupdater.html
+++ b/r2/r2/templates/thingupdater.html
@@ -24,24 +24,25 @@
   import simplejson
  %>
 <script type="text/javascript">
-  var likes = ${unsafe(simplejson.dumps(thing.likes))};
-  var dislikes = ${unsafe(simplejson.dumps(thing.dislikes))};
-  var friends = ${unsafe(simplejson.dumps(list(thing.is_friend)))};
-  $.map(likes, function(l) {
-            $(".id-" + l + " > .midcol").find(".arrow.up").vote("", null, null, true);
-        });
-  $.map(dislikes, function(l) {
-            $(".id-" + l + " > .midcol").find(".arrow.down").vote("", null, null, true);
-        });
-  $.map(friends, show_friend);
+  (function() {
+    var likes = ${unsafe(simplejson.dumps(thing.likes))};
+    var dislikes = ${unsafe(simplejson.dumps(thing.dislikes))};
+    var friends = ${unsafe(simplejson.dumps(list(thing.is_friend)))};
+    $.map(likes, function(l) {
+              $(".id-" + l + " > .midcol").find(".arrow.up").vote("", null, null, true);
+          });
+    $.map(dislikes, function(l) {
+              $(".id-" + l + " > .midcol").find(".arrow.down").vote("", null, null, true);
+          });
+    $.map(friends, show_friend);
 
-  var gildings = ${unsafe(simplejson.dumps(thing.gildings))};
-  for (var gilded_comment in gildings) {
-    var gilding_data = gildings[gilded_comment];
-    r.gold.gildComment(gilded_comment, gilding_data[0], gilding_data[1]);
-  }
+    var gildings = ${unsafe(simplejson.dumps(thing.gildings))};
+    for (var gilded_comment in gildings) {
+      var gilding_data = gildings[gilded_comment];
+      r.gold.gildComment(gilded_comment, gilding_data[0], gilding_data[1]);
+    }
 
-  var saves = ${unsafe(simplejson.dumps(list(thing.saves)))};
-  $.map(saves, show_saved);
-
+    var saves = ${unsafe(simplejson.dumps(list(thing.saves)))};
+    $.map(saves, show_saved);
+  })()
 </script>
