Move comment gilding icon to :before.
This allows .gilded-comment-icon to take up its full size (not relying
on a width:0 hack) and avoids the need for an extra element containing
the gilding count.

--- a/r2/r2/public/static/css/compact.scss
+++ b/r2/r2/public/static/css/compact.scss
@@ -879,18 +879,26 @@ padding: 5px;
 .gilded-comment-icon {
     position: relative;
     display: inline-block;
-    background-image: url(../gold-coin.png);  /* SPRITE */
-    background-repeat: no-repeat;
-    height: 14px;
-    width: 0;
-    padding-left: 13px;
-    margin: 0 0 -14px 6px;
+    margin: 0 0 -15px 8px;
     top: -8px;
+    color: #99895F;
+    font-size: .9em;
     vertical-align: middle;
 }
 
-.user-gilded > .entry .gilded-comment-icon {
-    padding-left: 23px;
+.gilded-comment-icon:before {
+    display: inline-block;
+    content: '';
+    background-image: url(../gold-coin.png);  /* SPRITE */
+    background-repeat: no-repeat;
+    height: 14px;
+    width: 13px;
+    margin-right: 2px;
+    vertical-align: -3px;
+}
+
+.user-gilded > .entry .gilded-comment-icon:before {
+    width: 23px;
 }
 
 body.post-under-1h-old .gilded-comment-icon,
@@ -898,12 +906,6 @@ body.post-under-6h-old .gilded-comment-icon {
     opacity: .55;
 }
 
-.gilded-comment-count {
-    color: #99895F;
-    padding-left: 2px;
-    font-size: .9em;
-    vertical-align: middle;
-}
 
 /** messages and inbox */
 .message {
