--- a/r2/r2/public/static/css/reddit-ie7-hax.css
+++ b/r2/r2/public/static/css/reddit-ie7-hax.css
@@ -37,3 +37,13 @@
 #header-bottom-right {
 	clear: both;
 }
+
+.gilded-comment-icon {
+    background: url(gold-coin.png) no-repeat;
+    padding-left: 15px;
+    height: 14px;
+}
+
+.user-gilded > .entry .gilded-comment-icon {
+    padding-left: 25px;
+}
