--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -6275,33 +6275,34 @@ table.diff {font-size: small;}
 .diff_chg {background-color:yellow}
 .diff_sub {background-color:lightcoral}
 
-span.gilded-comment-icon {
+.gilded-comment-icon {
     position: relative;
     display: inline-block;
-    background-image: url(../gold-coin.png);  /* SPRITE */
-    background-repeat: no-repeat;
-    height: 14px;
-    width: 0;
-    padding-left: 13px;
     margin: 0 0 -14px 8px;
     top: -8px;
+    color: #99895F;
+    font-size: .9em;
     vertical-align: middle;
 }
 
-.user-gilded > .entry span.gilded-comment-icon {
-    padding-left: 23px;
+.gilded-comment-icon:before {
+    display: inline-block;
+    content: '';
+    background-image: url(../gold-coin.png);  /* SPRITE */
+    background-repeat: no-repeat;
+    height: 14px;
+    width: 13px;
+    margin-right: 2px;
+    vertical-align: -3px;
+}
+
+.user-gilded > .entry .gilded-comment-icon:before {
+    width: 23px;
 }
 
 body.post-under-1h-old .gilded-comment-icon,
 body.post-under-6h-old .gilded-comment-icon {
     opacity: .55;
-}
-
-.gilded-comment-count {
-    color: #99895F;
-    padding-left: 2px;
-    font-size: .9em;
-    vertical-align: middle;
 }
 
 .buttons li.comment-save-button { display: none; }
