--- a/r2/r2/templates/prefoptions.html
+++ b/r2/r2/templates/prefoptions.html
@@ -146,11 +146,11 @@
 
       <p>${checkbox(_("show me links I've recently viewed"), "clickgadget")}</p>
       <p>${checkbox(_("compress the link display"), "compress")}</p>
-      <p>${checkbox(_("don't show links after i've liked them"), "hide_ups")}
+      <p>${checkbox(_("don't show links after I've liked them"), "hide_ups")}
          &#32;
          <span class="little gray">${_("(except my own)")}</span>
       </p>
-      <p>${checkbox(_("don't show links after i've disliked them"), "hide_downs")}
+      <p>${checkbox(_("don't show links after I've disliked them"), "hide_downs")}
          &#32;
          <span class="little gray">${_("(except my own)")}</span>
       </p>
@@ -245,7 +245,7 @@
   <tr>
     <th>${_("content options")}</th>
     <td class="prefright">
-      ${checkbox(_("i am over eighteen years old and willing to view adult content"), "over_18")}
+      ${checkbox(_("I am over eighteen years old and willing to view adult content"), "over_18")}
       &#32;<span class="little gray">(${_("required to view some reddits")})</span>
       <br/>
         ${checkbox(_("label posts that are not safe for work (NSFW)"), "label_nsfw", disabled = c.user.pref_no_profanity, disabled_text = "(requires not 'safer for work' mode)")}
