Add client side validation attributes to submit page form elements.
There're several benefits to using the type=url format for the link url
field, including a more context-useful keyboard on some mobile devices
and browser-side validation of URLs before even sending a request to us.

This should save us from the ugly "tried to submit %s but couldn't
parse" warnings coming from people pasting imgur bbcode etc. into the
field.

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -3837,6 +3837,7 @@ ul.tabmenu.formtab {
 
 .roundfield textarea,
 .roundfield input[type=text],
+.roundfield input[type=url],
 .roundfield input[type=password],
 .roundfield input[type=number] {
     font-size: 100%;
