/dev/api: Fully document the "links and comments" section.

--- a/r2/r2/templates/apihelp.html
+++ b/r2/r2/templates/apihelp.html
@@ -186,7 +186,7 @@
                 %if params:
                   %for param in sorted(params):
                     <tr>
-                      <th scope="row">${param}</td>
+                      <th scope="row">${param}</th>
                       <td>${params[param]}</td>
                     </tr>
                   %endfor
@@ -194,7 +194,7 @@
                 %if base_params:
                   %for param in sorted(base_params):
                     <tr class="base-param">
-                      <th scope="row">${param}</td>
+                      <th scope="row">${param}</th>
                       <td>${base_params[param]}</td>
                     </tr>
                   %endfor
